formation/apache-php/apache-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: apache-php
  namespace: #votre namespace
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: tutum/apache-php
        name: apache
        imagePullPolicy: IfNotPresent
