formation/apache-php/apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-php
  namespace: #votre namespace
  labels:
    app: web
spec:
  ports:
    - port: 80
  selector:
    app: web
